--- a/Myprofile.css
+++ b/Myprofile.css
@@ -9,6 +9,7 @@ header{
 }
 body{
 	background-color: #DEE2D9;
+	display: table;
 }
 h2 {
 	font-family: "Courier";
@@ -43,10 +44,12 @@ figcaption{
 	font-size: 70%;
 }
 footer{
+	background-color: #8DA290;
+	display: block;
+}
+h4{
 	font-style: oblique;
 	font-family: "Courier New";
 	font-size: 80%;
 	color: white;
-	background-color: #8DA290;
-	display: block;
 }
