--- a/Myprofile.css
+++ b/Myprofile.css
@@ -2,7 +2,7 @@
 header{
 	font-style: oblique;
 	font-family: "Courier New";
-	font-size: 150%;
+	font-size: 100%;
 	color: white;
 	background-color: #8DA290;
 }
@@ -17,7 +17,7 @@ h2 {
 	text-align: center;
 }
 h3 {
-	font-family: "Courier";
+	font-family: "Comfortaa";
 	font-size: 100%;
 	text-align: center;
 }
@@ -37,7 +37,7 @@ figure{
 	text-align: center;
 }
 figcaption{
-	font-style: oblique;
+	font-style: italic;
 	font-family: "Courier";
 	font-size: 70%;
 }
